# ascii-ball

./: CHANGELOG.md  README.md  ascii-ball.cabal  hie.yaml  stack.yaml
app/: Main.hs
data/: start.ini
src/: Animation.hs  AnimationV1.hs  AnimationV2.hs  AnsiTermBasics.hs  InitParser.hs
