cabal-version:      2.4
name:               ascii-ball
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ascii-ball
    main-is:          Main.hs
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:  Animation
    ghc-options:
    other-modules:
    hs-source-dirs:   src
    build-depends:    base ^>=4.15.1.0
    default-language: Haskell2010
